codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__background_terminal_secure_input_popup.snap
---
source: tui/src/chatwidget/tests/background_terminal.rs
expression: before
---
Secure password
Input is sent to the terminal and is not stored in history or logs.


Enter to send securely, Esc to cancel.
Press enter to confirm or esc to go back
